RC 4
====

- Added ProxyOptions to allow facilities to easily add proxy interfaces
  without having to create custom proxy factories.  The ProxyOptions
  are obtained via the ProxyUtil.

- Fixed IOC-65
  "DictionaryConverter should use the alternate overload of the 
   PerformConversion method in order to support dictionaries that contain 
   custom types"

- Moved ProxyComponentInspector from Castle.MicroKernel to here and added
  support to supply ProxyGenerationOptions on a ComponentModel basis.  This
  provides the needed ability to provide proxy options in facilities.

- Fixed IOC-69 - DefaultDependencyResolver issue with Service Overrides.

- Added ComponentProxyBehaviorAttribute and ComponentProxyInspector 
  to control the creation of component proxies.

- Added eval support to configuration. Currently it only supports 
  BaseDirectory as a content to evaluate

  <?eval $BaseDirectory ?>

- Added IEnvironmentInfo in an attempt to solve complex 
  configuration/environment issues.

- Fixing IOC-63 - source order of constructors should not matter

- Fixed IOC-62
  "Interceptors don't work properly on generic components"

- Applied Norbert Wagner's patch fixing IOC-55
  "Generic Type Converters: Set default entry types to generic arguments of property type"

- Applied Jeff Brown's patch fixing IOC-54
  "Empty component parameter values cause runtime exception during component resolution."

- Applied patch by Bill Pierce that

-- Introduces the WebUserControlComponentActivator

-- Introduces the KeySearchNamingSubSystem

-- Allows you to associate a custom component activator using
    1. componentActivatorType on component node
    2. ComponentActivatorAttribute

-- Allows you to create and configure child containers 
   through the configuration, using

  <configuration>
    <containers>
        <container name="child1">
          <configuration>
                <facilities>
					...
                </facilities>
          
                <components>