@@ -12,7 +12,7 @@
 // See the License for the specific language governing permissions and
 // limitations under the License.
 
-namespace Castle.Windsor.Proxy
+namespace Castle.MicroKernel.Proxy
 {
 	using System;
 
