@@ -1,0 +1,29 @@
+<configuration>
+
+  <facilities>
+    <facility
+        id="typedfactory"
+        type="Castle.Facilities.TypedFactory.TypedFactoryFacility, Castle.MicroKernel">
+
+      <factories>
+        <factory id="calculator.factory"
+            interface="Castle.Windsor.Tests.ICalculatorFactory, Castle.Windsor.Tests"
+            creation="Create" destruction="Release" />
+
+      </factories>
+
+    </facility>
+  </facilities>
+
+  <components>
+    <component id="standard.interceptor"
+      type="Castle.Core.Interceptor.StandardInterceptor, Castle.Core">
+    </component>
+    
+    <component id="default" 
+      type="Castle.Windsor.Tests.Components.CalculatorServiceWithMultipleInterfaces, Castle.Windsor.Tests"
+      service="Castle.Windsor.Tests.Components.ICalcService, Castle.Windsor.Tests">
+    </component>
+  </components>
+
+</configuration>
