@@ -209,13 +209,10 @@
     <Compile Include="Proxy\AbstractProxyFactory.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="Proxy\ProxyComponentInspector.cs" />
     <Compile Include="Proxy\DefaultProxyFactory.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="Proxy\ProxyConstants.cs" />
-    <Compile Include="Proxy\ProxyOptions.cs" />
-    <Compile Include="Proxy\ProxyUtil.cs" />
+    <Compile Include="Proxy\ProxyGenerationHookAdapter.cs" />
     <Compile Include="WindsorContainer.cs">
       <SubType>Code</SubType>
     </Compile>
