@@ -1,0 +1,51 @@
+// Copyright 2004-2007 Castle Project - http://www.castleproject.org/
+// 
+// Licensed under the Apache License, Version 2.0 (the "License");
+// you may not use this file except in compliance with the License.
+// You may obtain a copy of the License at
+// 
+//     http://www.apache.org/licenses/LICENSE-2.0
+// 
+// Unless required by applicable law or agreed to in writing, software
+// distributed under the License is distributed on an "AS IS" BASIS,
+// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+// See the License for the specific language governing permissions and
+// limitations under the License.
+
+namespace Castle.Windsor.Proxy
+{
+	using System;
+	using System.Reflection;
+	using Castle.DynamicProxy;
+	using Castle.MicroKernel.Proxy;
+
+	internal class ProxyGenerationHookAdapter : IProxyGenerationHook
+	{
+		private readonly IProxyHook hook;
+
+		public ProxyGenerationHookAdapter(IProxyHook hook)
+		{
+			if (hook == null)
+			{
+				throw new ArgumentNullException("hook");
+			}
+
+			this.hook = hook;
+		}
+
+		bool IProxyGenerationHook.ShouldInterceptMethod(Type type, MethodInfo memberInfo)
+		{
+			return hook.ShouldInterceptMethod(type, memberInfo);	
+		}
+
+		void IProxyGenerationHook.NonVirtualMemberNotification(Type type, MemberInfo memberInfo)
+		{
+			hook.NonVirtualMemberNotification(type, memberInfo);
+		}
+
+		void IProxyGenerationHook.MethodsInspected()
+		{
+			hook.MethodsInspected();
+		}
+	}
+}
